--- a/css/style.css
+++ b/css/style.css
@@ -1503,6 +1503,8 @@ footer {
     width: 100%;
     border: none;
     padding: 10px 0;
+    border-left: 5px solid #99cc65;
+    padding-left: 12px;
   }
 
   /* 角丸の向き調整（縦並びだと自然にする） */
