fix filenames for GitHub Pages

--- a/css/style.css
+++ b/css/style.css
@@ -1020,7 +1020,7 @@ section,
 }
 
 .price-container {
-  background-image: url("../img/price_bg_3.PNG");
+  background-image: url("../img/price_bg_3.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
