--- a/css/style.css
+++ b/css/style.css
@@ -894,7 +894,7 @@ support
 /* スライダー */
 .support-slider img {
   width: 100%;
-  height: 280px;
+  height: auto;
   object-fit: cover;
 }
 
@@ -1084,7 +1084,6 @@ section,
   display: inline-block;
   font-size: 28px;
   line-height: 1;
-  /* text-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
   text-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
 }
 
@@ -1098,7 +1097,7 @@ section,
   content: "";
   bottom: -16px;
   left: 0;
-  width: 260px;
+  width: 270px;
   height: 3px;
   background-color: #00a9ff;
 }
@@ -1869,6 +1868,31 @@ price
     text-align: center;
   }
 
+.price-detail p {
+  margin-right: 20px;
+  font-size: 18px;
+}
+
+.price-detail p:first-child {
+  margin-left: 32px; /* ← これ微調整 */
+}
+
+.price-detail span {
+  display: inline-block;
+  font-size: 28px;
+  line-height: 1;
+  text-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
+}
+
+.price-detail-left::after {
+  position: absolute;
+  content: "";
+  bottom: -16px;
+  left: 0;
+  width: 220px;
+  height: 3px;
+  background-color: #00a9ff;
+}
   /* ------------------------------
 faq 
 -------------------------------*/
@@ -1961,6 +1985,40 @@ footer
   .study-phones img:nth-child(3) {
     display: none;
   }
+
+  /* スライダー画像 */
+  .support-slider img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+/* 料金 */
+.price-detail p {
+  margin-right: 20px;
+  font-size: 16px;
+}
+
+.price-detail p:first-child {
+  margin-left: 16px; /* ← これ微調整 */
+}
+
+.price-detail span {
+  display: inline-block;
+  font-size: 22px;
+  line-height: 1;
+  text-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
+}
+
+.price-detail-left::after {
+  position: absolute;
+  content: "";
+  bottom: -16px;
+  left: 0;
+  width: 220px;
+  height: 3px;
+  background-color: #00a9ff;
+}
 
   /* footer高さ調整 */
   .footer-logo-box {
