“メインビジュアルボタン修正”

--- a/css/style.css
+++ b/css/style.css
@@ -418,7 +418,7 @@ main {
   }
 }
 
-/* 複数カードを "少しずつ遅らせて" 出す（）*/
+/* 複数カードを "少しずつ遅らせて" 出す */
 .feature-card:nth-child(1) {
   animation-delay: 0s;
 }
@@ -1480,12 +1480,6 @@ footer {
 
   /* main */
   /* mainvisual */
-
-  /* .hero-bg {
-    background-position: 45% 50%;
-    background-size: 130%; ← まずはこれで試す(すみません、一旦修正してます！竹石
-  } */
-
   .mainvisual {
     margin-bottom: 0;
   }
@@ -1944,8 +1938,14 @@ footer
   }
 
   /* キャッチコピー */
+  /* hero-content を画面いっぱいに広げる */
   .hero-content {
-    margin-top: 20px;
+    width: 100%;
+    left: 50%;
+    transform: translateX(-50%); /* Y方向センタリングを解除 */
+    top: 40%;                    
+    padding: 0 20px;            
+    box-sizing: border-box;
   }
 
   .hero-content h1 {
@@ -1954,13 +1954,13 @@ footer
   }
 
   .hero-content p {
-    font-size: 0.6rem;
-    margin-bottom: 15px;
+    font-size: 0.8rem;
+    margin-bottom: 30px;
   }
 
   .hero-content .btn {
     margin-top: 10px;
-    padding: 16px 34px;
+    padding: 16px 30px;
     font-size: 14px;
     font-weight: bold;
   }
