--- a/css/style.css
+++ b/css/style.css
@@ -713,6 +713,8 @@ main {
 .flow-item5 {
   border: 1px solid #99cc65;
   padding: 5px;
+  width: 20%;
+  box-sizing: border-box;
 }
 
 .flow-item2,
@@ -722,6 +724,8 @@ main {
   background-color: #99cc65;
   background-color: rgba(153, 204, 101, 0.2);
   padding: 5px;
+  width: 20%;
+  box-sizing: border-box;
 }
 
 #flow .item-title {
