--- a/css/style.css
+++ b/css/style.css
@@ -521,12 +521,15 @@ main {
   justify-content: space-between;
   gap: 20px;
   margin-top: 80px;
+  align-items: stretch;
 }
 
 .voice-item {
-  width: 23%; /* ▶ ４つ横並びを維持 */
+  width: 23%;
   position: relative;
   transition: transform 0.3s ease;
+  display: flex;
+  flex-direction: column;
 }
 
 .voice-item:hover {
@@ -557,6 +560,9 @@ main {
   padding: 30px 10px;
   min-height: 260px;
   position: relative;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .voice-age {
@@ -1015,7 +1021,7 @@ section,
 }
 
 .price-container {
-  background-image: url("../img/price_bg_2.png");  /* 仮でプライス２の写真で対応中 */
+  background-image: url("../img/price_bg_2.png"); /* 仮でプライス２の写真で対応中 */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1561,6 +1567,7 @@ footer {
 
   .voice-item {
     width: 100%;
+    display: block;
   }
 
   .voice-box {
@@ -1798,10 +1805,10 @@ support
 
   /* スライダー画像 */
   .support-slider img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-}
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
 
   /* ------------------------------
 /* 背景ロゴ設置 */
@@ -1867,31 +1874,31 @@ price
     text-align: center;
   }
 
-.price-detail p {
-  margin-right: 20px;
-  font-size: 18px;
-}
+  .price-detail p {
+    margin-right: 20px;
+    font-size: 18px;
+  }
 
-.price-detail p:first-child {
-  margin-left: 32px; /* ← これ微調整 */
-}
+  .price-detail p:first-child {
+    margin-left: 32px; /* ← これ微調整 */
+  }
 
-.price-detail span {
-  display: inline-block;
-  font-size: 28px;
-  line-height: 1;
-  text-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
-}
+  .price-detail span {
+    display: inline-block;
+    font-size: 28px;
+    line-height: 1;
+    text-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
+  }
 
-.price-detail-left::after {
-  position: absolute;
-  content: "";
-  bottom: -16px;
-  left: 0;
-  width: 220px;
-  height: 3px;
-  background-color: #00a9ff;
-}
+  .price-detail-left::after {
+    position: absolute;
+    content: "";
+    bottom: -16px;
+    left: 0;
+    width: 220px;
+    height: 3px;
+    background-color: #00a9ff;
+  }
   /* ------------------------------
 faq 
 -------------------------------*/
@@ -1940,8 +1947,8 @@ footer
     width: 100%;
     left: 50%;
     transform: translateX(-50%); /* Y方向センタリングを解除 */
-    top: 50%;                    
-    padding: 0 20px;            
+    top: 50%;
+    padding: 0 20px;
     box-sizing: border-box;
   }
 
@@ -1993,37 +2000,37 @@ footer
 
   /* スライダー画像 */
   .support-slider img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-}
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
 
-/* 料金 */
-.price-detail p {
-  margin-right: 20px;
-  font-size: 16px;
-}
+  /* 料金 */
+  .price-detail p {
+    margin-right: 20px;
+    font-size: 16px;
+  }
 
-.price-detail p:first-child {
-  margin-left: 16px; /* ← これ微調整 */
-}
+  .price-detail p:first-child {
+    margin-left: 16px; /* ← これ微調整 */
+  }
 
-.price-detail span {
-  display: inline-block;
-  font-size: 22px;
-  line-height: 1;
-  text-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
-}
+  .price-detail span {
+    display: inline-block;
+    font-size: 22px;
+    line-height: 1;
+    text-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
+  }
 
-.price-detail-left::after {
-  position: absolute;
-  content: "";
-  bottom: -16px;
-  left: 0;
-  width: 220px;
-  height: 3px;
-  background-color: #00a9ff;
-}
+  .price-detail-left::after {
+    position: absolute;
+    content: "";
+    bottom: -16px;
+    left: 0;
+    width: 220px;
+    height: 3px;
+    background-color: #00a9ff;
+  }
 
   /* footer高さ調整 */
   .footer-logo-box {
